@@ -3701,24 +3701,24 @@ FIPS_dsa_sig_encode                     4089	EXIST:OPENSSL_FIPS:FUNCTION:DSA
 CRYPTO_dbg_remove_all_info              4090	EXIST::FUNCTION:
 OPENSSL_init                            4091	EXIST::FUNCTION:
 private_Camellia_set_key                4092	EXIST:OPENSSL_FIPS:FUNCTION:CAMELLIA
-JPAKE_STEP3A_process                    4093	EXIST::FUNCTION:
-JPAKE_STEP1_release                     4094	EXIST::FUNCTION:
-JPAKE_get_shared_key                    4095	EXIST::FUNCTION:
-JPAKE_STEP3B_init                       4096	EXIST::FUNCTION:
-JPAKE_STEP1_generate                    4097	EXIST::FUNCTION:
-JPAKE_STEP1_init                        4098	EXIST::FUNCTION:
-JPAKE_STEP3B_process                    4099	EXIST::FUNCTION:
-JPAKE_STEP2_generate                    4100	EXIST::FUNCTION:
-JPAKE_CTX_new                           4101	EXIST::FUNCTION:
-JPAKE_CTX_free                          4102	EXIST::FUNCTION:
-JPAKE_STEP3B_release                    4103	EXIST::FUNCTION:
-JPAKE_STEP3A_release                    4104	EXIST::FUNCTION:
-JPAKE_STEP2_process                     4105	EXIST::FUNCTION:
-CRYPTO_strdup                           4106	EXIST::FUNCTION:
-JPAKE_STEP3B_generate                   4107	EXIST::FUNCTION:
-JPAKE_STEP1_process                     4108	EXIST::FUNCTION:
-JPAKE_STEP3A_generate                   4109	EXIST::FUNCTION:
-JPAKE_STEP2_release                     4110	EXIST::FUNCTION:
-JPAKE_STEP3A_init                       4111	EXIST::FUNCTION:
-ERR_load_JPAKE_strings                  4112	EXIST::FUNCTION:
-JPAKE_STEP2_init                        4113	EXIST::FUNCTION:
+CRYPTO_strdup                           4093	EXIST::FUNCTION:
+JPAKE_STEP3A_process                    4094	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP1_release                     4095	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_get_shared_key                    4096	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP3B_init                       4097	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP1_generate                    4098	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP1_init                        4099	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP3B_process                    4100	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP2_generate                    4101	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_CTX_new                           4102	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_CTX_free                          4103	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP3B_release                    4104	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP3A_release                    4105	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP2_process                     4106	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP3B_generate                   4107	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP1_process                     4108	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP3A_generate                   4109	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP2_release                     4110	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP3A_init                       4111	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+ERR_load_JPAKE_strings                  4112	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
+JPAKE_STEP2_init                        4113	EXIST:OPENSSL_EXPERIMENTAL_JPAKE:FUNCTION:
