@@ -79,7 +79,8 @@ my $OS2=0;
 my $safe_stack_def = 0;
 
 my @known_platforms = ( "__FreeBSD__", "PERL5", "NeXT",
-			"EXPORT_VAR_AS_FUNCTION", "ZLIB", "OPENSSL_FIPS" );
+			"EXPORT_VAR_AS_FUNCTION", "ZLIB", "OPENSSL_FIPS", 
+			"OPENSSL_EXPERIMENTAL_JPAKE" );
 my @known_ossl_platforms = ( "VMS", "WIN16", "WIN32", "WINNT", "OS2" );
 my @known_algorithms = ( "RC2", "RC4", "RC5", "IDEA", "DES", "BF",
 			 "CAST", "MD2", "MD4", "MD5", "SHA", "SHA0", "SHA1",
@@ -151,7 +152,10 @@ foreach (@ARGV, split(/ /, $options))
  			 || $_ eq "enable-zlib-dynamic") {
  		$zlib = 1;
 	}
- 
+
+	if ($_ eq "enable-experimental-jpake") {
+ 		$jpake = 1;
+	}
 
 	$do_ssl=1 if $_ eq "ssleay";
 	if ($_ eq "ssl") {
@@ -552,6 +556,10 @@ sub do_defs
 						$tag{$tag[$tag_i]}=2;
 						print STDERR "DEBUG: $file: chaged tag $1 = 2\n" if $debug;
 					}
+					if ($tag[$tag_i] eq "OPENSSL_EXPERIMENTAL_".$1) {
+						$tag{$tag[$tag_i]}=-2;
+						print STDERR "DEBUG: $file: chaged tag $1 = -2\n" if $debug;
+					}
 					$tag_i--;
 				}
 			} elsif (/^\#\s*endif/) {
@@ -561,6 +569,8 @@ sub do_defs
 					print STDERR "DEBUG: \$t=\"$t\"\n" if $debug;
 					if ($tag{$t}==2) {
 						$tag{$t}=-1;
+					} elsif ($tag{$t}==-2) {
+						$tag{$t}=1;
 					} else {
 						$tag{$t}=0;
 					}
@@ -1099,6 +1109,9 @@ sub is_valid
 				return 1;
 			}
 			if ($keyword eq "ZLIB" && $zlib) { return 1; }
+			if ($keyword eq "OPENSSL_EXPERIMENTAL_JPAKE" && $jpake) {
+				return 1;
+			}
 			return 0;
 		} else {
 			# algorithms
